--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "illuminate/database": "^8.0|^9.0|^10.0",
         "netflex/api": "^4.0",
         "netflex/dbal": "^1.0|^2.0",
-        "netflex/query-builder": "^4.0",
-        "doctrine/dbal": "^2.0|^3.0"
+        "netflex/query-builder": "^4.0"
     },
     "require-dev": {
         "illuminate/config": "^8.0|^9.0|^10.0"
