--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "laravel",
         "database"
     ],
+    "license": "MIT",
     "authors": [
         {
             "name": "Thomas Alrek",
