--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "illuminate/database": "^8.0|^9.0|^10.0",
+        "php": "^8.1",
+        "illuminate/support": "^10.0",
+        "illuminate/database": "^10.0",
         "netflex/api": "^4.0",
-        "netflex/dbal": "^1.0.1|^2.0.1",
+        "netflex/dbal": "^3.0",
         "netflex/query-builder": "^4.0"
     },
     "require-dev": {
